# sql-unit-test

./: .coverage  .cz.toml  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: bumpversion.yml  cd.yml  docs_ci.yml
docs/: index.md
docs/contributing/: index.html
docs/docs/: contributing.md  installation.md  usage.md
docs/installation/: index.html
docs/usage/: index.html
sample/playlists/: Playlistid_not_null.sql
search/: search_index.json
sql_unit_test/: __init__.py  cli.py  config.py  config_manager.py  connection.py  directory_check.py  logger.py  main.py  run_tests.py
sql_unit_test/cli/: commands.py
sql_unit_test/core/: __init__.py  config_manager.py  connection.py  directory_check.py  initialize.py  run.py  run_test.py
tests/core/: test_directory_check.py  test_utils.py
